<resources>
    <string name="app_name">firebaseAuthentification</string>
    <string name="connectez_vous">Connectez-vous</string>
    <string name="adresse_email">Adresse email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="vous_n_tes_pas_encore_inscrit_cliquez_ici">vous n\'êtes pas encore inscrit ? Cliquez ici</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="d_j_inscrit_cliquez_ici_pour_se_connecter">Déjà inscrit ? Cliquez ici pour se connecter</string>
    <string name="inscrivez_vous">Inscrivez-vous</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="adresse">Adresse</string>
    <string name="pseudo">Pseudo</string>
    <string name="sexe">Sexe</string>
</resources>
